fix contrast errors in all other css files

--- a/styles/employment.css
+++ b/styles/employment.css
@@ -5,7 +5,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
-    color: white;
+    color: black;
 }
 
 #page-wrapper {
